k8s/observability/node-exporter.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/name: node-exporter
  name: node-exporter
  namespace: observability
spec:
  clusterIP: None
  ports:
    - name: https
      port: 9100
      targetPort: 9100
  selector:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/name: node-exporter
